fix: Fix header background for Firefox on mobile
There’s a glitch on mobile when scrolling to the bottom, then to the top
and opening the “three-bars” menu: the background disapears. I think it
comes from the radial-gradient, so I remove it on mobile.

--- a/src/assets/stylesheets/_layout.css
+++ b/src/assets/stylesheets/_layout.css
@@ -9,7 +9,7 @@
 
     width: 100%;
 
-    background: radial-gradient(circle at top, var(--color-turquoise-3) 60%, var(--color-turquoise-4));
+    background: var(--color-turquoise-3);
     box-shadow: 0 0 5px var(--color-grey-4);
 }
 
@@ -17,6 +17,7 @@
     .layout--connected .layout__header {
         position: static;
 
+        background: radial-gradient(circle at top, var(--color-turquoise-3) 60%, var(--color-turquoise-4));
         box-shadow: none;
     }
 
